# read_dataframe

./: .read_dataframe.py  LICENSE.txt  README.md  pyproject.toml  rdr.py  read_dataframe.sh  requirements.txt  setup.py
read_dataframe/: rdf.py
